<?xml version="1.0" encoding="utf-8"?>
<resources>

        <string name="date">2013-08-19</string>
        <string name="version">Release 3</string>

        <string name="app_name">The Podtoid Aural Extrusion</string>
        <string name="action_settings">Settings</string>
        <string name="title_section1">Section 1</string>
        <string name="title_section2">Section 2</string>
        <string name="title_section3">Section 3</string>
        <string name="title_activity_about">About</string>
        <string name="hello_world">Hello world!</string>

        <string name="twitter_podtoid">\@Podtoid</string>
        <string name="twitter_conrad">\@ConradZimmerman</string>
        <string name="twitter_holmes">\@TronKnotts</string>
        <string name="twitter_sterling">\@JimSterling</string>

        <string name="about_thanks">Much thanks to the Podtoid Facebook group for their assistance and encouragement!\n\nMore to come.</string>

</resources>
